@@ -1,0 +1,7 @@
+#!@PYTHON@
+
+from XtcInput.unitTestPyDgramListUtil import *
+
+if __name__ == "__main__":
+    unittest.main(argv=[sys.argv[0], '-v'])
+
